Room DataBase Unit Test is not working. Need to check it.

--- a/UnitTesting/app/build.gradle
+++ b/UnitTesting/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+//https://mdapp.medium.com/annotation-processing-with-kapt-and-gradle-237793f2be57
+    id 'kotlin-kapt'
 }
 
 android {
@@ -40,4 +42,16 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+
+    // https://developer.android.com/training/data-storage/room
+    def room_version = "2.4.3"
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+    // optional - Test helpers
+    testImplementation "androidx.room:room-testing:$room_version"
+    androidTestImplementation "androidx.room:room-testing:$room_version"
+
+    //https://developer.android.com/jetpack/androidx/releases/arch-core#version_210_3
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
 }
