--- a/UnitTesting/app/build.gradle
+++ b/UnitTesting/app/build.gradle
@@ -40,4 +40,13 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+
+    /*espresson intent Rule
+    * https://developer.android.com/training/testing/espresso/intents
+    *
+    * */
+    androidTestImplementation('androidx.test.espresso:espresso-intents:3.4.0')
+    androidTestImplementation "androidx.test:runner:1.3.0"
+    androidTestImplementation "androidx.test:core:1.3.0"
+    androidTestImplementation "androidx.test.ext:junit-ktx:1.1.2"
 }
