--- a/UnitTesting/app/build.gradle
+++ b/UnitTesting/app/build.gradle
@@ -40,4 +40,15 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+
+    /*
+    Mockito Depedency
+    https://developer.android.com/training/testing/local-tests#dependencies
+     */
+//    testImplementation 'org.mockito:mockito-core:2.19.0'
+//    testImplementation 'org.mockito:mockito-inline:2.13.0'
+
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'org.mockito:mockito-core:2.19.0'
+    testImplementation "org.mockito:mockito-inline:3.11.2"
 }
