--- a/UnitTesting/app/build.gradle
+++ b/UnitTesting/app/build.gradle
@@ -40,4 +40,11 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+
+    /**
+      Co routine Test Dependency
+      https://developer.android.com/kotlin/coroutines/test
+      https://kotlinlang.org/api/kotlinx.coroutines/kotlinx-coroutines-test/
+     */
+        testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
 }
